--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h2>Halo, Saya Falih Pangestu</h2>
                     <p class="intro">
                         Mahasiswa <strong>Teknik Informatika</strong> di 
-                        <strong>Politeknik Negeri Pontianak</strong> yang berfokus di bidang Mobile Design & Web Development.
+                        <strong>Politeknik Negeri Pontianak</strong> yang berfokus di bidang Mobile Design & Web Developer.
                     </p>
                     <div class="btn-container">
                         <a href="#projects" class="btn">Lihat Project</a>
@@ -50,7 +50,7 @@
             <div class="about-intro">
                 <h3 style="color: #0d6efd; font-size: 1.8rem; margin-bottom: 1rem;">Hard Skills</h3>
                 <p>
-                    Saya tertarik pada bidang Mobile Design & Web Development. Dalam project saya, saya biasanya menggunakan <strong>HTML, CSS, dan JavaScript</strong> untuk membangun website yang cepat, responsif, dan mudah digunakan. Saya juga berpengalaman menggunakan <strong>Java, Python, Microsoft Office, Canva, dan Figma</strong> untuk berbagai kebutuhan pengembangan dan design.
+                    Saya tertarik pada bidang Mobile Design & Web Developer. Dalam project saya, saya biasanya menggunakan <strong>HTML, CSS, dan JavaScript</strong> untuk membangun website yang cepat, responsif, dan mudah digunakan. Saya juga berpengalaman menggunakan <strong>Java, Python, Microsoft Office, Canva, dan Figma</strong> untuk berbagai kebutuhan pengembangan dan design.
                 </p>
             </div>
 
