--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 <div class="card">
                     <img src="image/project3.png" alt="Tampilan Aplikasi Mobile">
                     <div class="card-content">
-                        <h3>Aplikasi Mobile E-Commerce</h3>
-                        <p>Desain aplikasi mobile untuk membantu mahasiswa agar bisa mengakses materi kuliah kapan saja dan di mana saja lewat mobile.</p>
+                        <h3>Aplikasi Modul Ajar Elektronik</h3>
+                        <p>Aplikasi mobile untuk membantu mahasiswa agar bisa mengakses materi kuliah kapan saja dan di mana saja lewat mobile.</p>
                     </div>
                 </div>
             </div>
